# AgentFix

./: .gitignore  README.md  agentfix.yaml  agentfix.yaml.example  gui.py  hht  patchpilot.yaml  patchpilot.yaml.example  pyproject.toml  setup.py  test_gui_clone.py  test_locate.py
.agentfix-state/: events.sqlite3
docs/: 01-project-overview.md  02-environment-setup.md  03-command-reference.md  04-generated-regression-tests.md  05-v3-testing-guide.md  06-ui-design-plan(1).md  07-v4-environment-aware-agent-guide.md  08-v5-iterative-repair-loop.md  gui_usage_guide.md
records/: demo-001.json  demo-001.md  fastapi-order-v3-001.json  fastapi-order-v3-001.md  fastapi-order-v3-002.json  fastapi-order-v3-002.md  fastapi-order-v3-003.json  fastapi-order-v3-003.md  fastapi-order-v3-005.json  fastapi-order-v3-005.md  watch-demo-python-service-36e894412c03.json  watch-demo-python-service-36e894412c03.md  watch-fastapi-order-service-1467214cd826.json  watch-fastapi-order-service-1467214cd826.md  watch-fastapi-order-service-1ca579ee78d7.json  watch-fastapi-order-service-1ca579ee78d7.md  watch-fastapi-order-service-2aa00b7cd08e.json  watch-fastapi-order-service-2aa00b7cd08e.md  watch-fastapi-order-service-2fa3e5cd0567.json  watch-fastapi-order-service-2fa3e5cd0567.md  watch-fastapi-order-service-34d06ffaad68.json  watch-fastapi-order-service-34d06ffaad68.md  watch-fastapi-order-service-39c11c3c1493.json  watch-fastapi-order-service-39c11c3c1493.md  watch-fastapi-order-service-3de5df5109b0.json  watch-fastapi-order-service-3de5df5109b0.md  watch-fastapi-order-service-4065fa59ceda.json  (+17 more)
(+114 files in other folders)
