[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchpilot"
version = "0.1.0"
description = "Agent-based service auto-repair CLI for Python repositories"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "openai>=1.0.0,<3",
  "pydantic>=2.8.0,<3",
  "PyYAML>=6.0,<7",
  "tenacity>=8.0.0,<9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9"]

[project.scripts]
patchpilot = "patchpilot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
norecursedirs = ["tests/fixtures"]
